backends/lean/Aeneas/Tactic/Step/Tests/IntroOutputs.lean
import Aeneas.Do
import Aeneas.Std.Slice
import Aeneas.Tactic.Step

/-! # `introOutputs` tests -/

open Aeneas Aeneas.Std Result

namespace Aeneas.Tactic.Step.Tests.IntroOutputs

def pairProg : Result (Nat ├Ч Nat) := ok (1, 2)

@[step]
theorem pairProg_spec : pairProg тжГ p => p.1 = 1 тИз p.2 = 2 тжД := by
  unfold pairProg; step*

/--
info: Try this:

  [apply]     let* тЯи p, p_post1, p_post2 тЯй тЖР pairProg_spec
    agrind
-/
#guard_msgs in
example : pairProg тжГ p => p.1 = 1 тИз p.2 = 2 тжД := by
  step*?

/--
info: Try this:

  [apply]     let* тЯи p, p_post1, p_post2 тЯй тЖР pairProg_spec
    agrind
-/
#guard_msgs in
example : (do let p тЖР pairProg; ok p) тжГ p => p.1 = 1 тИз p.2 = 2 тжД := by
  step*?

def threeProg : Result (Nat ├Ч Nat ├Ч Nat) := ok (1, 2, 3)

@[step]
theorem threeProg_spec : threeProg тжГ a b c => a = 1 тИз b = 2 тИз c = 3 тжД := by
  unfold threeProg; step*

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3 тЯй тЖР threeProg_spec
    agrind
-/
#guard_msgs in
example : threeProg тжГ a b c => a = 1 тИз b = 2 тИз c = 3 тжД := by
  step*?

/--
info: Try this:

  [apply]     let* тЯи x, y, x_post1, x_post2, x_post3 тЯй тЖР threeProg_spec
    agrind
-/
#guard_msgs in
example : (do let (x, y) тЖР threeProg; ok (x + y.1 + y.2)) тжГ r => r = 6 тжД := by
  step*?

def nestedProg : Result ((Nat ├Ч Nat) ├Ч Nat) := ok ((5, 6), 7)

@[step]
theorem nestedProg_spec : nestedProg тжГ ((a, b), c) => a = 5 тИз b = 6 тИз c = 7 тжД := by
  unfold nestedProg; step*

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3 тЯй тЖР nestedProg_spec
    agrind
-/
#guard_msgs in
example : nestedProg тжГ ((a, b), c) => a = 5 тИз b = 6 тИз c = 7 тжД := by
  step*?

/--
error: unsolved goals
case a
a : тДХ ├Ч тДХ
b : тДХ
a_post1 : a.1 = 5
a_post2 : a.2 = 6
a_post3 : b = 7
тКв a.1 = 5 тИз a.2 = 6 тИз b = 7
-/
#guard_msgs in
example : nestedProg тжГ a b => a.1 = 5 тИз a.2 = 6 тИз b = 7 тжД := by
  step with nestedProg_spec

/--
info: Try this:

  [apply]     let* тЯи x, y, x_post1, x_post2, x_post3 тЯй тЖР nestedProg_spec
    agrind
-/
#guard_msgs in
example : (do let (x, y) тЖР nestedProg; ok (x, y)) тжГ a b => a.1 = 5 тИз a.2 = 6 тИз b = 7тжД := by
  step*?

def quadProg : Result ((Nat ├Ч Nat) ├Ч (Nat ├Ч Nat)) := ok ((8, 9), (10, 11))

/-! ## `quadProg_spec` shape ├Ч bind-pattern matrix

`quadProg`'s return type `(Nat ├Ч Nat) ├Ч (Nat ├Ч Nat)` admits several distinct
spec encodings. Below, each section pins a different `quadProg_spec` via a
*scoped* `@[step]` attribute, then runs the same four `do`-block bind patterns
against it. Each cell embeds an arbitrary arithmetic expression involving the
bound variables тАФ this exercises the bind-continuation expansion that `step`'s
call-site-tree extraction reads, and the trailing `agrind` checks the numeric
post-condition.

Every combination should produce the same `let* тЯи ... тЯй тЖР quadProg_spec`
output: the bind let-pattern dictates the destructure depth, and the spec's
own encoding has no influence on it.

The four bind shapes (rows):
- `let (a, b) тЖР тАж`            тАФ pair-naming, no nested destructure
- `let ((a, b), c) тЖР тАж`       тАФ destructure the left pair only
- `let (a, (b, c)) тЖР тАж`       тАФ destructure the right pair only
- `let ((a, b), (c, d)) тЖР тАж`  тАФ full destructure

The spec shapes tested (sections):
- `SpecNamed`       тАФ `тжГ a b => a.1 = тАж тжД`           (uncurry' only)
- `SpecLeftDestr`   тАФ `тжГ (a, b) c => тАж тжД`            (uncurry' + uncurry-left)
- `SpecRightDestr`  тАФ `тжГ a (b, c) => тАж тжД`            (uncurry' + uncurry-right)
- `SpecFullDestr`   тАФ `тжГ (a, b) (c, d) => тАж тжД`       (uncurry' + uncurry-both)
- `SpecSingleTuple` тАФ `тжГ ((a, b), (c, d)) => тАж тжД`    (single binder, nested uncurry)
- `SpecProjection`  тАФ `тжГ p => p.1.1 = тАж тжД`           (single binder, no destructure)
-/

namespace SpecNamed
@[scoped step]
theorem quadProg_spec :
    quadProg тжГ a b => a.1 = 8 тИз a.2 = 9 тИз b.1 = 10 тИз b.2 = 11 тжД := by
  unfold quadProg; step*

/--
info: Try this:

  [apply]     let* тЯи a, b, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, b) тЖР quadProg
              ok (a.1 + a.2 + b.1 + b.2)) тжГ res => res = 38 тжД := by step*?

/--
error: unsolved goals
case a
c : тДХ ├Ч тДХ
a b : тДХ
a_post1 : a = 8
a_post2 : b = 9
a_post3 : c.1 = 10
a_post4 : c.2 = 11
тКв a + b * 2 + c.1 + c.2 = 47
-/
#guard_msgs in
example : (do let ((a, b), c) тЖР quadProg
              ok (a + b * 2 + c.1 + c.2)) тжГ res => res = 47 тжД := by
  step with quadProg_spec

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, (b, c)) тЖР quadProg
              ok (a.1 + a.2 * 3 + b + c)) тжГ res => res = 56 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, d, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), (c, d)) тЖР quadProg
              ok (a + b + c * 2 + d)) тжГ res => res = 48 тжД := by step*?
end SpecNamed

namespace SpecLeftDestr
@[scoped step]
theorem quadProg_spec :
    quadProg тжГ (a, b) c => a = 8 тИз b = 9 тИз c.1 = 10 тИз c.2 = 11 тжД := by
  unfold quadProg; step*

/--
error: unsolved goals
case a
a b : тДХ ├Ч тДХ
a_post1 : a.1 = 8
a_post2 : a.2 = 9
a_post3 : b.1 = 10
a_post4 : b.2 = 11
тКв a.1 + a.2 + b.1 + b.2 = 38
-/
#guard_msgs in
example : (do let (a, b) тЖР quadProg
              ok (a.1 + a.2 + b.1 + b.2)) тжГ res => res = 38 тжД := by
  step with quadProg_spec

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), c) тЖР quadProg
              ok (a + b * 2 + c.1 + c.2)) тжГ res => res = 47 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, (b, c)) тЖР quadProg
              ok (a.1 + a.2 * 3 + b + c)) тжГ res => res = 56 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, d, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), (c, d)) тЖР quadProg
              ok (a + b + c * 2 + d)) тжГ res => res = 48 тжД := by step*?
end SpecLeftDestr

namespace SpecRightDestr
@[scoped step]
theorem quadProg_spec :
    quadProg тжГ a (b, c) => a.1 = 8 тИз a.2 = 9 тИз b = 10 тИз c = 11 тжД := by
  unfold quadProg; step*

/--
info: Try this:

  [apply]     let* тЯи a, b, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, b) тЖР quadProg
              ok (a.1 + a.2 + b.1 + b.2)) тжГ res => res = 38 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), c) тЖР quadProg
              ok (a + b * 2 + c.1 + c.2)) тжГ res => res = 47 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, (b, c)) тЖР quadProg
              ok (a.1 + a.2 * 3 + b + c)) тжГ res => res = 56 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, d, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), (c, d)) тЖР quadProg
              ok (a + b + c * 2 + d)) тжГ res => res = 48 тжД := by step*?
end SpecRightDestr

namespace SpecFullDestr
@[scoped step]
theorem quadProg_spec :
    quadProg тжГ (a, b) (c, d) => a = 8 тИз b = 9 тИз c = 10 тИз d = 11 тжД := by
  unfold quadProg; step*

/--
info: Try this:

  [apply]     let* тЯи a, b, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, b) тЖР quadProg
              ok (a.1 + a.2 + b.1 + b.2)) тжГ res => res = 38 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), c) тЖР quadProg
              ok (a + b * 2 + c.1 + c.2)) тжГ res => res = 47 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, (b, c)) тЖР quadProg
              ok (a.1 + a.2 * 3 + b + c)) тжГ res => res = 56 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, d, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), (c, d)) тЖР quadProg
              ok (a + b + c * 2 + d)) тжГ res => res = 48 тжД := by step*?
end SpecFullDestr

namespace SpecSingleTuple
@[scoped step]
theorem quadProg_spec :
    quadProg тжГ ((a, b), (c, d)) => a = 8 тИз b = 9 тИз c = 10 тИз d = 11 тжД := by
  unfold quadProg; step*

/--
info: Try this:

  [apply]     let* тЯи a, b, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, b) тЖР quadProg
              ok (a.1 + a.2 + b.1 + b.2)) тжГ res => res = 38 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), c) тЖР quadProg
              ok (a + b * 2 + c.1 + c.2)) тжГ res => res = 47 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, (b, c)) тЖР quadProg
              ok (a.1 + a.2 * 3 + b + c)) тжГ res => res = 56 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, d, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), (c, d)) тЖР quadProg
              ok (a + b + c * 2 + d)) тжГ res => res = 48 тжД := by step*?
end SpecSingleTuple

namespace SpecProjection
@[scoped step]
theorem quadProg_spec :
    quadProg тжГ p => p.1.1 = 8 тИз p.1.2 = 9 тИз p.2.1 = 10 тИз p.2.2 = 11 тжД := by
  unfold quadProg; step*

/--
info: Try this:

  [apply]     let* тЯи a, b, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, b) тЖР quadProg
              ok (a.1 + a.2 + b.1 + b.2)) тжГ res => res = 38 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), c) тЖР quadProg
              ok (a + b * 2 + c.1 + c.2)) тжГ res => res = 47 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let (a, (b, c)) тЖР quadProg
              ok (a.1 + a.2 * 3 + b + c)) тжГ res => res = 56 тжД := by step*?

/--
info: Try this:

  [apply]     let* тЯи a, b, c, d, a_post1, a_post2, a_post3, a_post4 тЯй тЖР quadProg_spec
    agrind
-/
#guard_msgs in
example : (do let ((a, b), (c, d)) тЖР quadProg
              ok (a + b + c * 2 + d)) тжГ res => res = 48 тжД := by step*?
end SpecProjection
